openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fcc-drs
  labels:
    app: fcc-drs
spec:
  selector:
    app: fcc-drs
  ports:
    - port: 5050
      targetPort: 5050
